[package]
name = "demos_glutin"
version = "0.1.0"
edition = "2021"

[dependencies]
glutin = "*"
nalgebra = "*"
num-traits = "0.2"
rand = "*"

del-msh = {path="../del-msh"}
#del-msh = "*"
del-ls = {path="../del-ls"}
#del-ls = "*"
del-dtri = "*"
del-misc = {path="../del-misc"}
del-gl = {path="../del-gl"}
del-geo = {path="../del-geo"}